# engl2

./: .gitignore  CMakeLists.txt  README.md  gl.sln
include/glad/: glad.h
src/: Printer.cpp  Printer.h  glad.c  imgui.ini  src.vcxproj  src.vcxproj.filters
src/algorithm/compute/: Blur.cpp  Blur.h  FFT.cpp  FFT.h  Fractal.cpp  Fractal.h  Perlin.cpp  Perlin.h  Voronoi.cpp  Voronoi.h
src/algorithm/compute/noise/: Fractal.cpp  Fractal.h  Gaussian.h  Noise.h  NoiseTexture.h  Perlin.cpp  Perlin.h  Voronoi.cpp  Voronoi.h
src/core/: Application.cpp  Application.h  Constants.h  Core.h  Global.cpp  Global.h  InputHandler.cpp  InputHandler.h  Main.cpp
src/ecs/: GameContext.h  entity.h
src/ecs/components/: Components.h
src/ecs/systems/: Animation.cpp  Animation.h  CascadedShadowMap.cpp  CascadedShadowMap.h  CloudSystem.cpp  CloudSystem.h  FractalSystem.cpp  FractalSystem.h  Systems.h  TerrainSystem.cpp  TerrainSystem.h  WaterSystem.cpp  WaterSystem.h
src/ecs/systems/renderer/: Common.cpp  Common.h  (+10 more)
src/math/: Math.h  Random.cpp  Random.h
src/renderer/base/: Animation.h  Asset.h  ComputeShader.h  Cubemap.h  Framebuffer.h  Material.h  Mesh.h  Model.h  Resource.h  SSBO.h  Shader.h  Skeleton.h  Texture.h
src/renderer/opengl/: ComputeShader.cpp  Cubemap.cpp  Framebuffer.cpp  Mesh.cpp  Model.cpp  SSBO.cpp  Shader.cpp  Texture.cpp
src/resources/: DebugMesh.cpp  DebugMesh.h  FileSystem.cpp  FileSystem.h  StaticModel.cpp  StaticModel.h
src/resources/importers/: AssetHandle.h  AssetImporter.h  AssetManager.h
src/ui/: Components.cpp  Components.h  EcsUi.h  ImGuiEntry.h  Ui.cpp  Ui.h
(+112 files in other folders)
